--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <body>
     <h1>Welcome to our week 5 and week 6 revision class</h1>
     <button onclick="welGreet()"> Click</button>
+    <button>Push me</button>
 
     <!-- <script>
         let name ="lamo";
