--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
         var num2 = 6;*document.write(fullname);/
         console.log(name);
     </script> -->
-    <script src="js/events.js"></script>
+
+    <ol>
+        <li>Futmx</li>
+        <li>Unizik</li>
+        </ol>
+    <script src="js/array.js"></script>
 </body>
 </html>
